fix jwt signing
