# src/main/webui/openapi.json
@@ -18,6 +18,50 @@
     "description" : "Auto generated value"
   } ],
   "paths" : {
+    "/api/auth/login" : {
+      "post" : {
+        "tags" : [ "Auth Resource" ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/AuthRequest"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : { }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/register" : {
+      "post" : {
+        "tags" : [ "Auth Resource" ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/UserRequest"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : { }
+            }
+          }
+        }
+      }
+    },
     "/api/posts" : {
       "get" : {
         "tags" : [ "Post Resource" ],
@@ -101,48 +145,26 @@
         } ]
       }
     },
-    "/api/users/login" : {
-      "post" : {
+    "/api/users/me" : {
+      "get" : {
         "tags" : [ "User Resource" ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/AuthRequest"
-              }
-            }
-          }
-        },
         "responses" : {
           "200" : {
             "description" : "OK",
             "content" : {
               "application/json" : { }
             }
-          }
-        }
-      }
-    },
-    "/api/users/register" : {
-      "post" : {
-        "tags" : [ "User Resource" ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/UserRequest"
-              }
-            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
         },
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : { }
-            }
-          }
-        }
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
       }
     },
     "/api/users/{id}" : {
@@ -166,8 +188,17 @@
                 }
               }
             }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
-        }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
       }
     },
     "/hello" : {
@@ -180,92 +211,6 @@
               "text/plain" : {
                 "schema" : {
                   "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/q/logging-manager" : {
-      "summary" : "Return info on all loggers, or a specific logger",
-      "description" : "Logging Manager Loggers",
-      "get" : {
-        "tags" : [ "Logging-manager" ],
-        "summary" : "Information on Logger(s)",
-        "description" : "Get information on all loggers or a specific logger.",
-        "operationId" : "logging_manager_get_all",
-        "parameters" : [ {
-          "name" : "loggerName",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Ok",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/LoggerInfo"
-                  }
-                }
-              }
-            }
-          },
-          "404" : {
-            "description" : "Not Found"
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "Logging-manager" ],
-        "summary" : "Update log level",
-        "description" : "Update a log level for a certain logger",
-        "operationId" : "logging_manager_update",
-        "requestBody" : {
-          "content" : {
-            "application/x-www-form-urlencoded" : {
-              "schema" : {
-                "type" : "object",
-                "properties" : {
-                  "loggerName" : { },
-                  "loggerLevel" : {
-                    "$ref" : "#/components/schemas/LoggerLevel"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses" : {
-          "201" : {
-            "description" : "Created"
-          }
-        }
-      }
-    },
-    "/q/logging-manager/levels" : {
-      "summary" : "Return all levels that is available",
-      "description" : "All available levels",
-      "get" : {
-        "tags" : [ "Logging-manager" ],
-        "summary" : "Get all available levels",
-        "description" : "This returns all possible log levels",
-        "operationId" : "logging_manager_levels",
-        "responses" : {
-          "200" : {
-            "description" : "Ok",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/LoggerLevel"
-                  }
                 }
               }
             }
@@ -440,6 +385,92 @@
           }
         }
       }
+    },
+    "/q/logging-manager" : {
+      "summary" : "Return info on all loggers, or a specific logger",
+      "description" : "Logging Manager Loggers",
+      "get" : {
+        "tags" : [ "Logging-manager" ],
+        "summary" : "Information on Logger(s)",
+        "description" : "Get information on all loggers or a specific logger.",
+        "operationId" : "logging_manager_get_all",
+        "parameters" : [ {
+          "name" : "loggerName",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/LoggerInfo"
+                  }
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Not Found"
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "Logging-manager" ],
+        "summary" : "Update log level",
+        "description" : "Update a log level for a certain logger",
+        "operationId" : "logging_manager_update",
+        "requestBody" : {
+          "content" : {
+            "application/x-www-form-urlencoded" : {
+              "schema" : {
+                "type" : "object",
+                "properties" : {
+                  "loggerLevel" : {
+                    "$ref" : "#/components/schemas/LoggerLevel"
+                  },
+                  "loggerName" : { }
+                }
+              }
+            }
+          }
+        },
+        "responses" : {
+          "201" : {
+            "description" : "Created"
+          }
+        }
+      }
+    },
+    "/q/logging-manager/levels" : {
+      "summary" : "Return all levels that is available",
+      "description" : "All available levels",
+      "get" : {
+        "tags" : [ "Logging-manager" ],
+        "summary" : "Get all available levels",
+        "description" : "This returns all possible log levels",
+        "operationId" : "logging_manager_levels",
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/LoggerLevel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components" : {
@@ -604,24 +635,6 @@
           }
         }
       },
-      "LoggerLevel" : {
-        "enum" : [ "OFF", "SEVERE", "ERROR", "FATAL", "WARNING", "WARN", "INFO", "DEBUG", "TRACE", "CONFIG", "FINE", "FINER", "FINEST", "ALL" ],
-        "type" : "string"
-      },
-      "LoggerInfo" : {
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "effectiveLevel" : {
-            "$ref" : "#/components/schemas/LoggerLevel"
-          },
-          "configuredLevel" : {
-            "$ref" : "#/components/schemas/LoggerLevel"
-          }
-        }
-      },
       "HealthCheckResponse" : {
         "type" : "object",
         "properties" : {
@@ -640,6 +653,24 @@
       "HealthCheckStatus" : {
         "enum" : [ "DOWN", "UP" ],
         "type" : "string"
+      },
+      "LoggerLevel" : {
+        "enum" : [ "OFF", "SEVERE", "ERROR", "FATAL", "WARNING", "WARN", "INFO", "DEBUG", "TRACE", "CONFIG", "FINE", "FINER", "FINEST", "ALL" ],
+        "type" : "string"
+      },
+      "LoggerInfo" : {
+        "type" : "object",
+        "properties" : {
+          "name" : {
+            "type" : "string"
+          },
+          "configuredLevel" : {
+            "$ref" : "#/components/schemas/LoggerLevel"
+          },
+          "effectiveLevel" : {
+            "$ref" : "#/components/schemas/LoggerLevel"
+          }
+        }
       }
     },
     "securitySchemes" : {
